--- a/index.html
+++ b/index.html
@@ -1,54 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="../profile-card-component-main/images/bg-pattern-bottom.svg">
+  <title>Frontend Mentor | Profile card component</title>
 
-    <title>Frontend Mentor | Stats preview card component</title>
-
-
-
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
-
 <body>
-    <div class="main">
-        <div class="container">
-            <div class="box">
-                <div class="left">
-                    <div class="text">
-                        <h3>Get <span>insights</span> that help your business grow.</h3>
-                        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
-                    </div>
-                    <div class="flex">
-                        <div class="part">
-                            <div>10k+</div>
-                            <p>companies</p>
-                        </div>
-                        <div class="part">
-                            <div>314</div>
-                            <p>Templates</p>
-                        </div>
-                        <div class="part">
-                            <div>12M+</div>
-                            <p>Queries</p>
-                        </div>
-                    </div>
+  <div class="main">
+    <div class="container">
+      <div class="head">
+        <img src="../profile-card-component-main/images/image-victor.jpg" alt="">
+        <div class="content">  Victor Crest <span> 26</span> </div>
+        <div>London</div>
+      </div>
+    
+<div class="sec">
+  <div class="one">
+   <div>80K</div>
+   <div> Followers </div>
+  </div>
+  <div class="one">
+    <div>803K</div>
+    <div> likes </div>
+   </div>
+   <div class="one">
+    <div>1.4K</div>
+    <div>Photos</div>
+   </div>
+</div>
 
 
-                </div>
-                <div class="image">
-                    <img src="./images/image-header-desktop.jpg" alt="">
-                </div>
-            </div>
-        </div>
-
-    </div>
+  <!-- <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Web Ghoul</a>.
+ 
+  </div>  -->
+ </div>
+</div>
 </body>
-
 </html>
